--- a/00 Doc/DV_RProject2.Rmd
+++ b/00 Doc/DV_RProject2.Rmd
@@ -21,4 +21,8 @@ Figure 2
 source("../03 Visualizations/DV2_Visualization2.R", echo = TRUE)
 ```
 
+Figure 3
+```{r}
+source("../03 Visualizations/DV2_Visualization3.R", echo = TRUE)
+```
 
